--- a/public/src/css/spendee.css
+++ b/public/src/css/spendee.css
@@ -2114,10 +2114,26 @@ form ._33IL div .LB4I ._3fS2._3qCx ._3SdL._2_oj:disabled {
   color: #7b93a4;
 }
 
+._33IL._3TLW div ._2XTe {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  pointer-events: none;
+  opacity: 0;
+  background: rgba(0, 0, 0, 0.6);
+  z-index: 800;
+  width: 100vw;
+}
+._33IL._3TLW div ._2XTe._2Gxn {
+  opacity: 0.6;
+  pointer-events: all;
+  transition: opacity 0.3s;
+}
 ._33IL._3TLW div ._33BO {
   position: relative;
   z-index: 1;
-  transition: z-index 0.35s step-end;
 }
 ._33IL._3TLW div ._33BO ._3PIU._3RzU {
   margin: 0 -15px;
@@ -2179,12 +2195,10 @@ form ._33IL div .LB4I ._3fS2._3qCx ._3SdL._2_oj:disabled {
   width: 100%;
   border-radius: 4px;
   align-items: stretch;
-  border: 1px solid transparent;
   background-color: #fff;
-  border-color: #e5ebee;
   color: #324c5b;
 }
-._33IL._3TLW div ._33BO ._3PIU._3RzU form .oTaE .LB4I._2N9Y ._3fS2.o-cw._1B3o .LB4I ._3fS2._1ubS .iLEV.IhHS ._3Iet.IhHS:hover {
+._33IL._3TLW div ._33BO ._3PIU._3RzU form .oTaE .LB4I._2N9Y ._3fS2.o-cw._1B3o .LB4I ._3fS2._1ubS .iLEV.IhHS ._3Iet.IhHS:hover ._2ieP div ._10jr {
   border-color: #bbcdd8;
 }
 ._33IL._3TLW div ._33BO ._3PIU._3RzU form .oTaE .LB4I._2N9Y ._3fS2.o-cw._1B3o .LB4I ._3fS2._1ubS .iLEV.IhHS ._3Iet.IhHS ._2ieP {
@@ -2195,9 +2209,12 @@ form ._33IL div .LB4I ._3fS2._3qCx ._3SdL._2_oj:disabled {
 }
 ._33IL._3TLW div ._33BO ._3PIU._3RzU form .oTaE .LB4I._2N9Y ._3fS2.o-cw._1B3o .LB4I ._3fS2._1ubS .iLEV.IhHS ._3Iet.IhHS ._2ieP div {
   width: 100%;
+  position: relative;
 }
 ._33IL._3TLW div ._33BO ._3PIU._3RzU form .oTaE .LB4I._2N9Y ._3fS2.o-cw._1B3o .LB4I ._3fS2._1ubS .iLEV.IhHS ._3Iet.IhHS ._2ieP div ._10jr {
   position: relative;
+  border: 1px solid transparent;
+  border-color: #e5ebee;
 }
 ._33IL._3TLW div ._33BO ._3PIU._3RzU form .oTaE .LB4I._2N9Y ._3fS2.o-cw._1B3o .LB4I ._3fS2._1ubS .iLEV.IhHS ._3Iet.IhHS ._2ieP div ._10jr:hover ._1BZ3 ._24dr ._1lxA {
   border-color: #324c5b;
@@ -2230,6 +2247,8 @@ form ._33IL div .LB4I ._3fS2._3qCx ._3SdL._2_oj:disabled {
 }
 ._33IL._3TLW div ._33BO ._3PIU._3RzU form .oTaE .LB4I._2N9Y ._3fS2.o-cw._1B3o .LB4I ._3fS2._1ubS .iLEV.IhHS ._3Iet.IhHS ._2ieP div ._10jr ._1BZ3 ._2s9x ._3-9b._2_Bp svg {
   fill: white;
+  width: 16px;
+  height: 16px;
 }
 ._33IL._3TLW div ._33BO ._3PIU._3RzU form .oTaE .LB4I._2N9Y ._3fS2.o-cw._1B3o .LB4I ._3fS2._1ubS .iLEV.IhHS ._3Iet.IhHS ._2ieP div ._10jr ._1BZ3 ._24dr {
   cursor: pointer;
@@ -2250,6 +2269,51 @@ form ._33IL div .LB4I ._3fS2._3qCx ._3SdL._2_oj:disabled {
   border-top-width: 0;
   transform: rotate(-45deg);
   transition: all 0.2s ease-in-out;
+}
+._33IL._3TLW div ._33BO ._3PIU._3RzU form .oTaE .LB4I._2N9Y ._3fS2.o-cw._1B3o .LB4I ._3fS2._1ubS .iLEV.IhHS ._3Iet.IhHS ._2ieP div ._10jr ._1BZ3.open ._24dr ._1lxA {
+  transform: rotate(135deg);
+  border-color: #324c5b;
+}
+._33IL._3TLW div ._33BO ._3PIU._3RzU form .oTaE .LB4I._2N9Y ._3fS2.o-cw._1B3o .LB4I ._3fS2._1ubS .iLEV.IhHS ._3Iet.IhHS ._2ieP div .Select-menu-outer-wrapper {
+  position: absolute;
+  top: 41px;
+  left: 0;
+  width: 300%;
+  height: auto;
+  max-height: 300px;
+  overflow: auto;
+  border: 1px solid #bbcdd8;
+  border-radius: 4px;
+  background-color: white;
+  padding: 15px;
+  display: none;
+  grid-template-columns: auto auto auto;
+  grid-row-gap: 20px;
+}
+._33IL._3TLW div ._33BO ._3PIU._3RzU form .oTaE .LB4I._2N9Y ._3fS2.o-cw._1B3o .LB4I ._3fS2._1ubS .iLEV.IhHS ._3Iet.IhHS ._2ieP div .Select-menu-outer-wrapper ._2s9x {
+  padding: 0;
+  background: none;
+  border: none;
+  flex-basis: 33.33%;
+  display: flex;
+  justify-content: center;
+}
+._33IL._3TLW div ._33BO ._3PIU._3RzU form .oTaE .LB4I._2N9Y ._3fS2.o-cw._1B3o .LB4I ._3fS2._1ubS .iLEV.IhHS ._3Iet.IhHS ._2ieP div .Select-menu-outer-wrapper ._2s9x span {
+  display: block;
+  height: 40px;
+  width: 40px;
+  border-radius: 100%;
+  padding: 0;
+  border: none;
+  position: relative;
+}
+._33IL._3TLW div ._33BO ._3PIU._3RzU form .oTaE .LB4I._2N9Y ._3fS2.o-cw._1B3o .LB4I ._3fS2._1ubS .iLEV.IhHS ._3Iet.IhHS ._2ieP div .Select-menu-outer-wrapper ._2s9x span svg {
+  position: absolute;
+  top: 14%;
+  left: 18%;
+  fill: white;
+  width: 25px;
+  height: 25px;
 }
 ._33IL._3TLW div ._33BO ._3PIU._3RzU form .oTaE .LB4I._2N9Y ._3fS2.o-cw._1Nti {
   opacity: 1;
@@ -2352,6 +2416,7 @@ form ._33IL div .LB4I ._3fS2._3qCx ._3SdL._2_oj:disabled {
   align-items: stretch;
   width: 100%;
   flex-grow: 1;
+  position: relative;
 }
 ._33IL._3TLW div ._33BO ._3PIU._3RzU form .oTaE .LB4I._2N9Y ._3fS2.o-cw._5CwE .iLEV.IhHS ._3Iet.IhHS ._2ieP .Select-control {
   border-radius: 4px;
@@ -2415,6 +2480,7 @@ form ._33IL div .LB4I ._3fS2._3qCx ._3SdL._2_oj:disabled {
   border-radius: 4px;
 }
 ._33IL._3TLW div ._33BO ._3PIU._3RzU form .oTaE .LB4I._2N9Y ._3fS2.o-cw._5CwE .iLEV.IhHS ._3Iet.IhHS ._2ieP .Select-control .Select-arrow-zone .Select-arrow {
+  transition: all 0.2s ease-in-out;
   position: relative;
   display: block;
   height: 8px;
@@ -2425,14 +2491,61 @@ form ._33IL div .LB4I ._3fS2._3qCx ._3SdL._2_oj:disabled {
   border-top-width: 0;
   transform: rotate(-45deg);
 }
-._33IL._3TLW div ._33BO ._3PIU._3RzU form .oTaE .LB4I._2N9Y ._3fS2.o-cw._1B3o._259J {
-  opacity: 1;
+._33IL._3TLW div ._33BO ._3PIU._3RzU form .oTaE .LB4I._2N9Y ._3fS2.o-cw._5CwE .iLEV.IhHS ._3Iet.IhHS ._2ieP .Select-control.open .Select-arrow-zone .Select-arrow {
+  transform: rotate(135deg);
+  border-color: #324c5b;
+}
+._33IL._3TLW div ._33BO ._3PIU._3RzU form .oTaE .LB4I._2N9Y ._3fS2.o-cw._5CwE .iLEV.IhHS ._3Iet.IhHS ._2ieP .Select-menu-outer-wrapper {
+  position: absolute;
+  top: 41px;
+  height: auto;
+  left: 0;
+  right: 0;
+  border: 1px solid #bbcdd8;
+  border-radius: 4px;
+  background-color: white;
+  display: none;
+}
+._33IL._3TLW div ._33BO ._3PIU._3RzU form .oTaE .LB4I._2N9Y ._3fS2.o-cw._5CwE .iLEV.IhHS ._3Iet.IhHS ._2ieP .Select-menu-outer-wrapper .Select-value {
+  color: #324c5b;
+  height: 34px;
+  line-height: 38px;
+  padding-left: 10px;
+  padding-right: 10px;
+  max-width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  font-size: 14px;
+  display: flex;
+  align-items: center;
+  cursor: default;
+}
+._33IL._3TLW div ._33BO ._3PIU._3RzU form .oTaE .LB4I._2N9Y ._3fS2.o-cw._5CwE .iLEV.IhHS ._3Iet.IhHS ._2ieP .Select-menu-outer-wrapper .Select-value:hover {
+  background-color: #bbcdd8;
+}
+._33IL._3TLW div ._33BO ._3PIU._3RzU form .oTaE .LB4I._2N9Y ._3fS2.o-cw._5CwE .iLEV.IhHS ._3Iet.IhHS ._2ieP .Select-menu-outer-wrapper .Select-value .Select-value-label {
+  color: #324c5b;
+  line-height: 38px;
+  max-width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  font-size: 14px;
+  display: flex;
+  align-items: center;
+}
+._33IL._3TLW div ._33BO ._3PIU._3RzU form .oTaE .LB4I._2N9Y ._3fS2.o-cw._5CwE .iLEV.IhHS ._3Iet.IhHS ._2ieP .Select-menu-outer-wrapper .Select-value .Select-value-label.selected {
+  font-weight: 600;
+}
+._33IL._3TLW div ._33BO ._3PIU._3RzU form .oTaE .LB4I._2N9Y ._3fS2.o-cw._1B3o1 {
+  opacity: 0;
   pointer-events: all;
   display: initial;
   flex-basis: 25%;
   max-width: 25%;
 }
-._33IL._3TLW div ._33BO ._3PIU._3RzU form .oTaE .LB4I._2N9Y ._3fS2.o-cw._1B3o._259J ._3SdL._2_oj {
+._33IL._3TLW div ._33BO ._3PIU._3RzU form .oTaE .LB4I._2N9Y ._3fS2.o-cw._1B3o1 ._3SdL._2_oj {
   background-color: #12c48b;
   color: #fff;
   transition: all 0.2s ease-in-out;
@@ -2454,10 +2567,16 @@ form ._33IL div .LB4I ._3fS2._3qCx ._3SdL._2_oj:disabled {
   text-overflow: ellipsis;
   white-space: nowrap;
 }
-._33IL._3TLW div ._33BO ._3PIU._3RzU form .oTaE .LB4I._2N9Y ._3fS2.o-cw._1B3o._259J ._3SdL._2_oj:disabled {
+._33IL._3TLW div ._33BO ._3PIU._3RzU form .oTaE .LB4I._2N9Y ._3fS2.o-cw._1B3o1 ._3SdL._2_oj:disabled {
   background-color: #e5ebee;
   color: #7b93a4;
   box-shadow: none;
+}
+._33IL._3TLW div ._33BO ._3PIU._3RzU form .oTaE .LB4I._2N9Y ._3fS2.o-cw._1B3o1._259J {
+  opacity: 1;
+}
+._33IL._3TLW div ._33BO._1j3Q {
+  z-index: 950;
 }
 
 .UzPn._2pdK {
