--- a/public/src/css/settings/_account.scss
+++ b/public/src/css/settings/_account.scss
@@ -523,6 +523,12 @@
                                                                 line-height: 36px;
                                                                 transition: color .2s ease-in-out;
                                                             }
+
+                                                            input[type=number]::-webkit-inner-spin-button, 
+                                                            input[type=number]::-webkit-outer-spin-button { 
+                                                            -webkit-appearance: none; 
+                                                            margin: 0; 
+                                                            }
                                                         }
                                                     }
                                                 }
