--- a/public/src/css/spendee.css
+++ b/public/src/css/spendee.css
@@ -1000,6 +1000,451 @@
   border-radius: 0 0 8px 8px;
 }
 
+._3u9e {
+  background: white;
+  border-radius: 8px;
+  padding: 0 15px;
+  height: 72px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+._3u9e ._1-UC {
+  flex-grow: 1;
+  margin: 0;
+  padding: 0;
+  align-items: center;
+  list-style: none;
+  display: flex;
+}
+._3u9e ._1-UC .hk2G {
+  display: flex;
+  font-size: 16px;
+  color: #324c5b;
+}
+._3u9e ._1-UC .hk2G ._3WuR._1gOp {
+  color: #324c5b;
+  text-decoration: none;
+  position: relative;
+  display: inline;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  white-space: nowrap;
+  transition: color 0.2s ease-in-out;
+}
+._3u9e ._1-UC .hk2G ._3WuR._1gOp:hover {
+  text-decoration: underline;
+}
+._3u9e ._1-UC .hk2G ._3WuR._1gOp ._80fu {
+  font-size: 18px;
+  color: #324c5b;
+  margin: 0;
+  padding: 0;
+  font-weight: 600;
+  line-height: 1em;
+  white-space: normal;
+  word-break: break-all;
+}
+._3u9e ._1-UC .hk2G ._3WuR._1gOp ._1-3L {
+  font-size: 14px;
+  color: #7b93a4;
+  padding: 0;
+  margin: 0;
+}
+._3u9e ._1-UC .hk2G ._3RIH {
+  color: #93a1aa;
+  display: flex;
+  align-items: center;
+  margin: 0px 9px;
+}
+._3u9e ._1-UC .hk2G:last-child ._3RIH {
+  display: none;
+}
+._3u9e ._3rg0 {
+  flex-grow: 0;
+  width: auto;
+}
+._3u9e ._3rg0 ._3SdL._3j13 {
+  color: #12c48b;
+  background-color: #e7f9f3;
+  position: relative;
+  display: block;
+  height: 34px;
+  line-height: 34px;
+  width: 100%;
+  padding: 0 8px;
+  border-radius: 4px;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  outline: none;
+  font-size: 14px;
+  font-weight: 600;
+  border: none;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  transition: background-color 0.2s ease-in-out;
+}
+._3u9e ._3rg0 ._3SdL._3j13:hover {
+  background-color: #ccf3e9;
+}
+
+._3wsj._3QBC {
+  font-size: 12px;
+  line-height: normal;
+  position: relative;
+  width: 100%;
+  padding: 15px;
+  background-color: white;
+  border-radius: 8px;
+}
+._3wsj._3QBC .oTaE {
+  width: 100%;
+}
+._3wsj._3QBC .oTaE .LB4I {
+  display: flex;
+  flex: 0 1 auto;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+._3wsj._3QBC .oTaE .LB4I ._3fS2.o-cw._22vv._1V5z._37kk {
+  opacity: 1;
+  pointer-events: all;
+  display: initial;
+  flex-basis: 58.33333333%;
+  max-width: 58.33333333%;
+}
+._3wsj._3QBC .oTaE .LB4I ._3fS2.o-cw._22vv._1V5z._37kk ._1aWI {
+  margin: 0;
+  font-size: 14px;
+  font-weight: 600;
+}
+._3wsj._3QBC .oTaE .LB4I ._3fS2.o-cw._22vv._19wA._1KKs {
+  padding-top: 0px !important;
+  padding-bottom: 0px !important;
+  opacity: 1;
+  pointer-events: all;
+  display: initial;
+  flex-basis: 41.66666667%;
+  max-width: 41.66666667%;
+}
+._3wsj._3QBC .oTaE .LB4I ._3fS2.o-cw {
+  opacity: 1;
+  pointer-events: all;
+  display: initial;
+  flex-basis: 100%;
+  max-width: 100%;
+}
+._3wsj._3QBC .oTaE .LB4I ._3fS2.o-cw ._1Mfu {
+  display: block;
+  margin: 16px auto 0;
+  text-align: center;
+  font-size: 18px;
+  color: #324c5b;
+}
+._3wsj._3QBC .oTaE .LB4I ._3fS2.o-cw ._2Enb {
+  margin: 64px auto 32px;
+  max-width: 560px;
+}
+._3wsj._3QBC .oTaE .LB4I ._3fS2.o-cw ._2Enb ._3ezC {
+  position: relative;
+}
+._3wsj._3QBC .oTaE .LB4I ._3fS2.o-cw ._2Enb ._3ezC ._1brA {
+  position: absolute;
+  color: #fff;
+  font-size: 14px;
+  transform: translate(-50%, calc(-50% - 0.5em));
+  z-index: 2;
+}
+._3wsj._3QBC .oTaE .LB4I ._3fS2.o-cw ._2Enb ._3ezC ._1brA ._38qN {
+  text-align: center;
+  padding: 2px 4px;
+  border-radius: 4px;
+  width: 54px;
+  background: #2a3e49;
+}
+._3wsj._3QBC .oTaE .LB4I ._3fS2.o-cw ._2Enb ._3ezC ._1brA ._3yEU {
+  width: 0;
+  height: 0;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: -1px;
+  background: transparent;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 5px solid #2a3e49;
+}
+._3wsj._3QBC .oTaE .LB4I ._3fS2.o-cw ._2Enb ._3ezC ._1brA ._3-3k {
+  width: 2px;
+  height: 22px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: -1px;
+  background: #2a3e49;
+}
+._3wsj._3QBC .oTaE .LB4I ._3fS2.o-cw ._2Enb ._3ezC .s0y4.tTT7 {
+  width: 100%;
+}
+._3wsj._3QBC .oTaE .LB4I ._3fS2.o-cw ._2Enb ._3ezC .s0y4.tTT7 .wW2c.tTT7 {
+  height: 48px;
+  background: #e5ebee;
+  border-radius: 4px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  position: relative;
+  font-weight: 700;
+}
+._3wsj._3QBC .oTaE .LB4I ._3fS2.o-cw ._2Enb ._3ezC .s0y4.tTT7 .wW2c.tTT7 ._3ugj {
+  align-items: center;
+  height: 100%;
+  border-radius: 4px;
+  display: flex;
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+  transition: width 0.6s;
+  background: #1acb82;
+  box-shadow: 0 6px 10px 0 rgba(26, 203, 130, 0.16);
+}
+._3wsj._3QBC .oTaE .LB4I ._3fS2.o-cw ._2Enb ._3ezC .s0y4.tTT7 .wW2c.tTT7 ._3ugj .wD7J {
+  display: inline-flex;
+  color: #fff;
+}
+._3wsj._3QBC .oTaE .LB4I ._3fS2.o-cw ._2Enb ._3ezC .s0y4.tTT7 .wW2c.tTT7 ._3ugj .wD7J::before {
+  content: "";
+  width: 16px;
+}
+._3wsj._3QBC .oTaE .LB4I ._3fS2.o-cw ._2Enb ._3ezC .s0y4.tTT7 .wW2c.tTT7 .wD7J.lz4G.tTT7 {
+  height: 48px;
+  display: flex;
+  align-items: center;
+  color: #324c5b;
+  position: absolute;
+  top: 0;
+}
+._3wsj._3QBC .oTaE .LB4I ._3fS2.o-cw ._2Enb ._3ezC .s0y4.tTT7 .wW2c.tTT7 .wD7J.lz4G.tTT7::before {
+  content: "";
+  width: 16px;
+}
+._3wsj._3QBC .oTaE .LB4I ._3fS2.o-cw ._2Enb ._3ezC .s0y4.tTT7 .nKyy {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 4px;
+  font-size: 14px;
+  color: #7b93a4;
+}
+._3wsj._3QBC .oTaE .LB4I ._3fS2.o-cw .oTaE {
+  width: 100%;
+}
+._3wsj._3QBC .oTaE .LB4I ._3fS2.o-cw .oTaE .LB4I._298o {
+  position: relative;
+  display: grid;
+  grid-template-columns: 2fr 1fr 2fr;
+}
+._3wsj._3QBC .oTaE .LB4I ._3fS2.o-cw .oTaE .LB4I._298o ._3fS2._19bJ {
+  flex-grow: 0;
+  grid-column-start: 2;
+}
+._3wsj._3QBC .oTaE .LB4I ._3fS2.o-cw .oTaE .LB4I._298o ._3fS2._19bJ ._3SdL._3j13._1USz {
+  color: #12c48b;
+  background-color: #e7f9f3;
+  padding-left: 15px;
+  padding-right: 15px;
+  position: relative;
+  display: block;
+  height: 34px;
+  line-height: 34px;
+  width: 100%;
+  padding: 0 8px;
+  border-radius: 4px;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  outline: none;
+  font-size: 14px;
+  font-weight: 600;
+  border: none;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  transition: background-color 0.2s ease-in-out;
+}
+._3wsj._3QBC .oTaE .LB4I ._3fS2.o-cw .oTaE .LB4I._298o ._3fS2._19bJ ._3SdL._3j13._1USz:hover {
+  background-color: #ccf3e9;
+}
+
+.ReactModal__Content.ReactModal__Content--after-open._2RxW.otWy ._3EUw form ._2ZwS._3U03._2VOV {
+  position: static;
+  width: 600px !important;
+  max-width: 600px !important;
+}
+.ReactModal__Content.ReactModal__Content--after-open._2RxW.otWy ._3EUw form ._2ZwS._3U03._2VOV ._36Dk {
+  position: absolute;
+  right: 0;
+  top: 0;
+  transform: translate(50%, -50%);
+}
+.ReactModal__Content.ReactModal__Content--after-open._2RxW.otWy ._3EUw form ._2ZwS._3U03._2VOV ._36Dk .egUi.B8bm {
+  border-radius: 50%;
+  background: #7b93a4;
+  color: #fff;
+  transition: background-color 0.2s ease-in-out;
+  width: 30px;
+  height: 30px;
+  border: none;
+  cursor: pointer;
+  font-size: 14px;
+}
+.ReactModal__Content.ReactModal__Content--after-open._2RxW.otWy ._3EUw form ._2ZwS._3U03._2VOV ._36Dk .egUi.B8bm ._2nf9 {
+  display: inline-block;
+  position: relative;
+  top: -1px;
+}
+.ReactModal__Content.ReactModal__Content--after-open._2RxW.otWy ._3EUw form ._2ZwS._3U03._2VOV ._1Fvn._2VOV {
+  color: #324c5b;
+  font-size: 24px;
+  text-align: center;
+  font-weight: 500;
+  margin-top: 0px;
+  margin-bottom: 18px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  margin: 0.67em 0;
+}
+.ReactModal__Content.ReactModal__Content--after-open._2RxW.otWy ._3EUw form ._2ZwS._3U03._2VOV ._13pY .j4fJ ._2BJz {
+  max-width: 560px;
+  margin: 0 auto;
+}
+.ReactModal__Content.ReactModal__Content--after-open._2RxW.otWy ._3EUw form ._2ZwS._3U03._2VOV ._13pY .j4fJ ._2BJz ._1Zok {
+  color: #324c5b;
+  text-align: center;
+  font-weight: 500;
+  margin-bottom: 18px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  font-size: 18px !important;
+}
+.ReactModal__Content.ReactModal__Content--after-open._2RxW.otWy ._3EUw form ._2ZwS._3U03._2VOV ._13pY .j4fJ ._2BJz ._1Zok svg {
+  margin-right: 8px;
+}
+.ReactModal__Content.ReactModal__Content--after-open._2RxW.otWy ._3EUw form ._2ZwS._3U03._2VOV ._13pY .j4fJ ._2BJz ._2wfn {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.ReactModal__Content.ReactModal__Content--after-open._2RxW.otWy ._3EUw form ._2ZwS._3U03._2VOV ._13pY .j4fJ ._2BJz ._2wfn ._2Gra.required._1rNF {
+  display: block;
+  position: relative;
+  width: 272px;
+  margin-bottom: 16px;
+}
+.ReactModal__Content.ReactModal__Content--after-open._2RxW.otWy ._3EUw form ._2ZwS._3U03._2VOV ._13pY .j4fJ ._2BJz ._2wfn ._2Gra.required._1rNF ._2Aam {
+  display: flex;
+}
+.ReactModal__Content.ReactModal__Content--after-open._2RxW.otWy ._3EUw form ._2ZwS._3U03._2VOV ._13pY .j4fJ ._2BJz ._2wfn ._2Gra.required._1rNF ._2Aam ._1Hry._6bvf {
+  flex-grow: 1;
+  margin-bottom: 3px;
+  font-size: 12px;
+  color: #7b93a4;
+  cursor: unset;
+}
+.ReactModal__Content.ReactModal__Content--after-open._2RxW.otWy ._3EUw form ._2ZwS._3U03._2VOV ._13pY .j4fJ ._2BJz ._2wfn ._2Gra.required._1rNF ._1DjS.required {
+  display: flex;
+  width: 100%;
+  border-radius: 4px;
+  align-items: stretch;
+  border: 1px solid transparent;
+  background-color: #fff;
+  border-color: #e5ebee;
+  color: #324c5b;
+}
+.ReactModal__Content.ReactModal__Content--after-open._2RxW.otWy ._3EUw form ._2ZwS._3U03._2VOV ._13pY .j4fJ ._2BJz ._2wfn ._2Gra.required._1rNF ._1DjS.required ._3fMh {
+  display: flex;
+  align-items: stretch;
+  width: 100%;
+  flex-grow: 1;
+}
+.ReactModal__Content.ReactModal__Content--after-open._2RxW.otWy ._3EUw form ._2ZwS._3U03._2VOV ._13pY .j4fJ ._2BJz ._2wfn ._2Gra.required._1rNF ._1DjS.required ._3fMh input {
+  width: 100%;
+  padding: 0 8px;
+  background-color: transparent;
+  border: none;
+  font-size: 14px;
+  height: 36px;
+  outline: none;
+  line-height: 36px;
+  transition: color 0.2s ease-in-out;
+}
+.ReactModal__Content.ReactModal__Content--after-open._2RxW.otWy ._3EUw form ._2ZwS._3U03._2VOV ._13pY .j4fJ ._2BJz ._2wfn ._2Gra.required._1rNF ._1DjS.required ._3fMh input:disabled {
+  background-color: #e5ebee;
+}
+.ReactModal__Content.ReactModal__Content--after-open._2RxW.otWy ._3EUw form ._2ZwS._3U03._2VOV ._13pY .j4fJ ._2BJz ._2wfn ._2Gra.required._1rNF ._1DjS.required ._3fMh input[type=number]::-webkit-inner-spin-button,
+.ReactModal__Content.ReactModal__Content--after-open._2RxW.otWy ._3EUw form ._2ZwS._3U03._2VOV ._13pY .j4fJ ._2BJz ._2wfn ._2Gra.required._1rNF ._1DjS.required ._3fMh input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+.ReactModal__Content.ReactModal__Content--after-open._2RxW.otWy ._3EUw form ._2ZwS._3U03._2VOV ._2axu {
+  width: 70%;
+  margin: 10px auto;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  flex-shrink: 0;
+  margin-bottom: 0;
+}
+.ReactModal__Content.ReactModal__Content--after-open._2RxW.otWy ._3EUw form ._2ZwS._3U03._2VOV ._2axu ._3WuR._3SdL {
+  width: 100%;
+  margin-bottom: 15px;
+  position: relative;
+  display: block;
+  height: 34px;
+  line-height: 34px;
+  padding: 0 8px;
+  border-radius: 4px;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  font-size: 14px;
+  font-weight: 600;
+  border: none;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.ReactModal__Content.ReactModal__Content--after-open._2RxW.otWy ._3EUw form ._2ZwS._3U03._2VOV ._2axu ._3WuR._3SdL._2_oj {
+  background-color: #12c48b;
+  color: #fff;
+}
+.ReactModal__Content.ReactModal__Content--after-open._2RxW.otWy ._3EUw form ._2ZwS._3U03._2VOV ._2axu ._3WuR._3SdL._2_oj:disabled {
+  background-color: #e5ebee;
+  color: #7b93a4;
+  box-shadow: none;
+}
+.ReactModal__Content.ReactModal__Content--after-open._2RxW.otWy ._3EUw form ._2ZwS._3U03._2VOV ._2axu ._3WuR._3SdL._3qcS {
+  background-color: #7b93a4;
+  color: #fff;
+}
+.ReactModal__Content.ReactModal__Content--after-open._2RxW.otWy ._3EUw form ._2ZwS._3U03._2VOV ._2axu div ._3WuR._1gOp {
+  position: relative;
+  display: inline;
+  color: #7b93a4;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  text-decoration: underline;
+  white-space: nowrap;
+  transition: color 0.2s ease-in-out;
+  background-color: transparent;
+}
+.ReactModal__Content.ReactModal__Content--after-open._2RxW.otWy ._3EUw form ._2ZwS._3U03._2VOV ._2axu div ._3WuR._1gOp:hover {
+  text-decoration: none;
+}
+
 ._2ylm div ._2tU6 {
   position: relative;
   width: 90%;
@@ -2988,6 +3433,80 @@ form ._33IL div .LB4I ._3fS2._3qCx ._3SdL._2_oj:disabled {
 }
 ._33IL div div .jcQj ._3Vhx .oTaE .LB4I ._3fS2._qSI._3wbh div .egUi.removeInverse._3SdL.DfeI ._2nf9 svg {
   fill: #f14c52;
+}
+
+._2_yG {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+._1HLS {
+  color: #93a1aa;
+  margin-top: 1em;
+}
+
+._1iMn {
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  vertical-align: middle;
+  border: 2px solid currentColor;
+  border-top: 2px solid transparent;
+  border-radius: 50%;
+  -webkit-animation: _2A_K 1.5s linear infinite;
+  animation: _2A_K 1.5s linear infinite;
+}
+
+._3KBo {
+  margin-right: 5px;
+}
+
+.LB4I._3je1 {
+  align-items: flex-end;
+}
+
+._2ZwS ._13pY ._2GnZ {
+  text-align: center;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+}
+._2ZwS ._13pY ._2GnZ ._1bps {
+  background: #fb6666;
+  width: 64px;
+  height: 64px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  border-radius: 100%;
+}
+._2ZwS ._13pY ._2GnZ ._1bps svg {
+  fill: white;
+}
+._2ZwS ._13pY h1 {
+  color: #324c5b;
+  font-size: 24px;
+  text-align: center;
+  font-weight: 500;
+  margin-top: 0px;
+  margin-bottom: 18px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+._2ZwS ._13pY .j4fJ p {
+  margin-bottom: 25px;
+  line-height: 1.57;
+  text-align: center;
+  font-size: 14px;
+  color: #7b93a4;
 }
 
 * {
