--- a/public/src/css/spendee.scss
+++ b/public/src/css/spendee.scss
@@ -1,9 +1,11 @@
 @import 'wallet/transactions';
+@import 'wallet/budgetsDetail';
 @import 'auth/login';
 @import 'settings/account';
 @import 'settings/support';
 @import 'settings/terms';
 @import 'wallet/settings/categories';
+@import 'wallet/settings/generals';
 
 *{box-sizing: border-box;}
 
