--- a/public/src/css/wallet/settings/_generals.scss
+++ b/public/src/css/wallet/settings/_generals.scss
@@ -43,3 +43,54 @@
   margin-right: 5px;
 }
 
+.LB4I._3je1{
+  align-items: flex-end;
+}
+
+._2ZwS {
+  ._13pY{
+    ._2GnZ{
+      text-align: center;
+      margin-bottom: 20px;
+      display: flex;
+      justify-content: center;
+
+      ._1bps{
+        background: #fb6666;
+        width: 64px;
+        height: 64px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        border-radius: 100%;
+
+        svg{
+          fill: white;
+        }
+      }
+    }
+
+    h1{
+      color: #324c5b;
+      font-size: 24px;
+      text-align: center;
+      font-weight: 500;
+      margin-top: 0px;
+      margin-bottom: 18px;
+      text-overflow: ellipsis;
+      overflow: hidden;
+    }
+
+    .j4fJ{
+      p{
+        margin-bottom: 25px;
+        line-height: 1.57;
+        text-align: center;
+        font-size: 14px;
+        color: #7b93a4;
+      }
+    }
+  }
+}
+
